<?xml version="1.0"?>
<package>
 <name>cereal_port</name>
 <version>0.0.0</version>
  <description>Simple C++ serial port class for ROS.</description>
  <author>Gonçalo Cabrita and Pedro Sousa</author>
  <maintainer email="joao@todo.todo">joao</maintainer>
  <license>TODO</license>
  
<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

<export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lcereal_port"/>
  </export>

</package>


